--- a/tests/Packages/notebooks_models/test_of_path.ipynb
+++ b/tests/Packages/notebooks_models/test_of_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,13 +40,36 @@
     "\n",
     "from arenz_group_python import CV_Datas\n",
     "from arenz_group_python import Project_Paths\n",
+    "#from arenz_group_python.util_paths import PROJECT_FOLDERS\n",
     "print(nb_path)\n",
     "pp= Project_Paths()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAA\n",
+      "data_raw\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp._find_dir(pp.cwd, \"data_raw\")\n",
+    "print(\"AAAA\")\n",
+    "print(pp.rawdata_path)\n",
+    "pp.create_project_structure\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,15 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "destination:  c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\rawdata  exists:  True\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\rawdata\\Packages\\data found\n"
+      "data_raw\n",
+      "destination:  c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw  exists:  True\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\Packages\\data found\n"
      ]
     }
    ],
@@ -153,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,10 +210,13 @@
      "text": [
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests consumes 1557687 bytes in 10 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data consumes 46461026 bytes in 5 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave consumes 14481486 bytes in 3 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1 consumes 1524283 bytes in 27 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave consumes 14481633 bytes in 3 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1 consumes 1524538 bytes in 27 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages consumes 49389 bytes in 4 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data consumes 635 bytes in 4 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data consumes 635 bytes in 5 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw consumes 18763 bytes in 3 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\Packages consumes 0 bytes in 0 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\Packages\\data consumes 0 bytes in 0 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning consumes 53133 bytes in 2 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra consumes 11168 bytes in 1 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\data consumes 194 bytes in 2 non-directory files\n",
@@ -197,10 +224,11 @@
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\notebooks_models consumes 0 bytes in 1 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\py_scripts consumes 196 bytes in 2 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\rawdata consumes 66 bytes in 1 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models consumes 3288 bytes in 2 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models consumes 10820 bytes in 2 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models\\Packages consumes 0 bytes in 0 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models\\Packages\\data consumes 0 bytes in 0 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\py_scripts consumes 196 bytes in 2 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\rawdata consumes 18763 bytes in 3 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Project_Setup consumes 19657 bytes in 2 non-directory files\n"
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Project_Setup consumes 4211 bytes in 2 non-directory files\n"
      ]
     }
    ],
@@ -220,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +257,7 @@
        "[WindowsPath('modelData.ipynb'), WindowsPath('test_of_path.ipynb')]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
