--- a/tests/Load_TDMS paths.ipynb
+++ b/tests/Load_TDMS paths.ipynb
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\src\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
       "path existits: True\n"
      ]
     }
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
