--- a/tests/Packages/notebooks_models/test_of_path.ipynb
+++ b/tests/Packages/notebooks_models/test_of_path.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +55,16 @@
      "output_type": "stream",
      "text": [
       "AAAA\n",
-      "data_raw\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\n"
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\n",
+      "**/p1.tag\n",
+      "Source Dir:  c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\n",
+      "\t c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave\n",
+      "\t c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1\n",
+      "destination:  c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw  exists:  True\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\autoclave False\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\set1 False\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\n"
      ]
     }
    ],
@@ -64,7 +72,7 @@
     "pp._find_dir(pp.cwd, \"data_raw\")\n",
     "print(\"AAAA\")\n",
     "print(pp.rawdata_path)\n",
-    "pp.create_project_structure\n"
+    "pp.copyDirs(pp.cwd.parent.parent / \"data\",\"\",\"p1\")\n"
    ]
   },
   {
@@ -99,13 +107,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def listing(server_dir: Path, dest: Path, dirs):\n",
     "    print(\"destination: \", dest, \" exists: \", dest.exists())\n",
-    "    if not dest.exists: return\n",
+    "    if not dest.exists(): return\n",
     "    for dir in dirs:\n",
     "        dest_f = dest / dir.relative_to(server_dir)\n",
     "        if not dest_f.exists():\n",
@@ -127,7 +142,7 @@
     "            except FileNotFoundError:\n",
     "                print(f\"parent does not exist for {dest_f}\")\n",
     "        else:\n",
-    "            print(dest_f, \"found\")\n",
+    "            print(dest_f, \"exists\")\n",
     "\n",
     "\n"
    ]
@@ -144,8 +159,27 @@
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\n",
       "**/p1.tag\n",
       "dir ok c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data\n"
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data\n",
+      "**/p1.tag\n",
+      "Source Dir:  c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\n",
+      "\t c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave\n",
+      "\t c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1\n",
+      "\t c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[WindowsPath('c:/Users/gusta/Documents/GitHub/Arenz_Group_Python/tests/data/autoclave'),\n",
+       " WindowsPath('c:/Users/gusta/Documents/GitHub/Arenz_Group_Python/tests/data/set1'),\n",
+       " WindowsPath('c:/Users/gusta/Documents/GitHub/Arenz_Group_Python/tests/Packages/data')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -153,7 +187,8 @@
     "dirs = find_dirs_with_tags(pp.cwd.parent.parent,\"\",\"p1\")\n",
     "\n",
     "#listing(pp.cwd.parent.parent, pp.rawdata_path, dirs)\n",
-    " \n"
+    " \n",
+    "pp.find_dirs_with_tags(pp.cwd.parent.parent,\"\",\"p1\")"
    ]
   },
   {
@@ -165,9 +200,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_raw\n",
       "destination:  c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw  exists:  True\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\Packages\\data found\n"
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\data\\autoclave exists\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\data\\set1 exists\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\Packages\\data exists\n"
      ]
     }
    ],
@@ -187,6 +223,8 @@
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\n",
       "**/p1.tag\n",
       "dir ok c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data\n",
       "[]\n"
      ]
@@ -208,15 +246,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests consumes 1557687 bytes in 10 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests consumes 1556950 bytes in 10 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data consumes 46461026 bytes in 5 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave consumes 14481633 bytes in 3 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1 consumes 1524538 bytes in 27 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\autoclave consumes 14481633 bytes in 4 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\data\\set1 consumes 1524538 bytes in 28 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages consumes 49389 bytes in 4 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data consumes 635 bytes in 5 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw consumes 18763 bytes in 3 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\autoclave consumes 14481633 bytes in 3 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\data consumes 0 bytes in 0 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\data\\autoclave consumes 0 bytes in 0 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\data\\set1 consumes 0 bytes in 0 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\Packages consumes 0 bytes in 0 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\Packages\\data consumes 0 bytes in 0 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\data_raw\\set1 consumes 1524538 bytes in 27 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning consumes 53133 bytes in 2 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra consumes 11168 bytes in 1 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\data consumes 194 bytes in 2 non-directory files\n",
@@ -224,7 +267,7 @@
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\notebooks_models consumes 0 bytes in 1 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\py_scripts consumes 196 bytes in 2 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\rawdata consumes 66 bytes in 1 non-directory files\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models consumes 10820 bytes in 2 non-directory files\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models consumes 13727 bytes in 2 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models\\Packages consumes 0 bytes in 0 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models\\Packages\\data consumes 0 bytes in 0 non-directory files\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\py_scripts consumes 196 bytes in 2 non-directory files\n",
