--- a/tests/Packages/Local_Project_Create_Structure.ipynb
+++ b/tests/Packages/Local_Project_Create_Structure.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,6 @@
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
-      "loading arenz_group_python\n",
-      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n",
       "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n"
      ]
     }
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +68,7 @@
       "-\"py_scripts/my_Module.py\" already exists\n",
       "-\"__init__.py\" already exists\n",
       "-\"extractData.ipynb\" already exists\n",
-      "+\"copy_data_from_server.ipynb\" was created\n",
+      "-\"copy_data_from_server.ipynb\" already exists\n",
       "-\"README.txt\" already exists\n",
       "-\"README.txt\" already exists\n",
       "-\"extracted_values.csv\" already exists\n"
