--- a/tests/Packages/test_of_path.ipynb
+++ b/tests/Packages/test_of_path.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
       "loading arenz_group_python\n",
       "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n",
       "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\\notebooks_models\n"
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\n"
      ]
     }
    ],
@@ -107,10 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cfdfdcdfdfd\n"
+     ]
+    }
+   ],
+   "source": [
+    "aa = Path(\"C:\\\\temp\\\\aa\\\\bbb\\\\cfdfdcdfdfd\")\n",
+    "b = aa.parent\n",
+    "c = aa.relative_to(aa.parent)\n",
+    "print(c)"
+   ]
   },
   {
    "cell_type": "code",
