--- a/tests/data/set1/Plot_CVs.ipynb
+++ b/tests/data/set1/Plot_CVs.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -154,9 +154,10 @@
       "0.25 0.250 V/s\n",
       "CV 0.1 1.1 0.1\n",
       "{'Current Range': '1mA', 'Control Mode': 'WE', 'Cell Switch': 'TRUE', 'Start': '0.100 V', 'Start_Delay': '0.000 s', 'V1': '1.100 V', 'V2': '0.100 V', 'Rate': '0.250 V/s', 'Nr of Sweeps': '3.00', 'Method.Duration': '24.0', 'Method.Cycle Duration': '8.0', 'Method.Avg.Time': '0.008', 'AC Frequency': '0.000E+0 Hz', 'AC Amplitude': '0.0000 V', 'RHE': '-0.938 V', 'Gas': 'Ar', 'Temp_0': '298.15 K', 'Temp_1': '298.15 K', 'Pressure': '100000 Pa', 'Cell Material': 'Glass', 'CounterElectrode': 'Pt', 'Ref.Electrode': 'RHE', 'R.solution': '-1.00 Ohm', 'IR.compensation': '-1.00 Ohm', 'Electrolyte1': '0.1 M_HClO4: H2O_153', 'Electrolyte2': '_: _', 'Electrolyte3': '_: _', 'Electrode.Material': '', 'Electrode.Tip': '', 'Electrode.Area': '1.96E-5 m^2', 'Electrode.ExElectrode': '', 'Electrode.Cat.Loading': '0.00E+0 g m^-2', 'Electrode.Cat.Weight': '0.00E+0 g', 'Electrode.Cat.totWeight': '0.00E+0 g', 'Electrode.Cat.w%': '0.00', 'Electrode.Cat.Serial': '', 'Electrode.Cat.Batch': '', 'Electrode.Cat.Support': '', 'Electrode.Cat.Substrate': '', 'Note': '', 'Inst.Convection': 'NordEC - ECi-200 - RDE.lvlibp', 'Inst.Convection.Speed': '0.0 /min', 'Inst.Convection.1': '', 'Inst.Convection.1.Speed': '0.0 /min', 'Inst.Convection.2': '', 'Inst.Convection.2.Speed': '0.0 /min', 'Inst.SW0.Value': 'L', 'Inst.SW0.Driver': 'Switch DO - ECi-200', 'Application.Name': 'EC4 DAQ', 'Application.Version': '4.2.142.1', 'Lib.InterfacePotentiostat': '1.0.0.68', 'Lib.ECi-200': '1.1.43.0', 'Lib.Potentiostat_DAQ': '4.1.0.53', 'DAQ.Driver_Name': 'DAQmx', 'DAQ.Driver_Ver': '16.0.1', 'AddOn': '', 'DAQ.Device': 'USB-6361 (OEM)', 'DAQ.Device.ProductNum': '30107', 'DAQ.Device.SerialNum': '27578494', 'DAQ.Device.Name': 'Dev2', 'DAQ.AO.Channel': 'Dev2/ao0', 'DAQ.AO.Sampling': '100000 Hz;10000', 'DAQ.AI.Sampling': '30003 Hz;3000', 'Inst.Potentiostat': 'ECi-200', 'Inst.Potentiostat.Mode': 'WE'}\n",
+      "0.0\n",
       "0.25 0.250 V/s 1.96E-5 m^2 AAAA 1.96e-05\n",
-      "Integration_ [np.float64(1.2576017234394636e-06), 'C', np.float64(-1.321008991852646e-06), 'C']\n",
-      "Integration_ [np.float64(0.06416335323670731), 'C m^2', np.float64(-0.06739841795166557), 'C m^2']\n",
+      "Integration_ [np.float64(2.0121627575031418e-05), 'C', np.float64(-2.1136143869642337e-05), 'C']\n",
+      "Integration_ [np.float64(1.026613651787317), 'C m^2', np.float64(-1.078374687226649), 'C m^2']\n",
       "CV_144857_ 3.tdms\n"
      ]
     },
@@ -198,6 +199,7 @@
     "\n",
     "a = CV_Data(files[2])\n",
     "print(a.setup)\n",
+    "print(a.weight)\n",
     "print(a.rate,a.setup[\"Rate\"],a.setup[\"Electrode.Area\"],\"AAAA\", a.area )\n",
     "#a.plot( )\n",
     "print(\"Integration_\",a.integrate(-0.2,0.0,\"all\",True))\n",
@@ -218,7 +220,7 @@
       "CV_152635_ 3.tdms\n",
       "CV_152635_ 3 : EC data sets:  4\n",
       "CV 0.0 1.1 0.0\n",
-      "Integration_ [np.float64(-7.509777189817239e-06), 'C', np.float64(-3.7671581755507973e-06), 'C']\n"
+      "Integration_ [np.float64(-0.0030039108759268955), 'C', np.float64(-0.0015068632702203188), 'C']\n"
      ]
     },
     {
