--- a/tests/data/set1/Plot_CVs.ipynb
+++ b/tests/data/set1/Plot_CVs.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -159,9 +159,13 @@
       "Area 2.981e+02 K\n",
       "2.500e-01 V/s 0.250 V/s 1.96E-5 m^2 AAAA 1.960e-05 m^2\n",
       "2.012e-05 C\n",
-      "Integration: 2.012e-05 C /m^2 m^2\n",
+      "{'C': 1.0, 'm': -2.0}\n",
+      "{'Q': 1.0, 'A': -1.0}\n",
+      "{'': 1.0, 'C': 1.0}\n",
+      "{'': 1.0, 'Q': 1.0}\n",
+      "Integration: 2.012e-05   C\n",
       "1.027e+00 C m^2\n",
-      "Integration_ [<arenz_group_python.data_treatment.util.Q_V object at 0x000002A9987C6B90>, <arenz_group_python.data_treatment.util.Q_V object at 0x000002A991DA4590>]\n",
+      "Integration_ [<arenz_group_python.data_treatment.util.Q_V object at 0x000001BC36E64C90>, <arenz_group_python.data_treatment.util.Q_V object at 0x000001BC36C20190>]\n",
       "CV_144857_ 3.tdms\n"
      ]
     },
@@ -171,7 +175,7 @@
        "'CV_144857_ 3'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,20 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 1.0, 'm': 0.5}\n",
-      " C^1.00 m^0.50\n"
+      "{'C': -3.0, 'm': 0.5}\n",
+      " C^-3 m^0.5\n"
      ]
     }
    ],
    "source": [
-    "a = \"C /m^2 m^2.5\"\n",
+    "a = \"C^-3 /m^2 m^2.5\"\n",
     "b = a.split(\" \", 100)\n",
     "k={}\n",
     "for c in b:\n",
@@ -268,13 +272,18 @@
     "s =\"\"\n",
     "print (prep)  \n",
     "for key, value in prep.items():\n",
-    "    s = s+ f' {key}^{value:.2f}'\n",
+    "    if int(value*10) == 10:\n",
+    "        s = s +\" \" + key\n",
+    "    elif int(value) == value:\n",
+    "        s = s+ f' {key}^{value:.0f}'\n",
+    "    else:\n",
+    "        s = s+ f' {key}^{value:.1f}'\n",
     "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,18 +294,8 @@
       "CV_152635_ 3 : EC data sets:  4\n",
       "CV 0.0 1.1 0.0\n",
       "-3.004e-03 C\n",
-      "Integration_ [<arenz_group_python.data_treatment.util.Q_V object at 0x000002A9962F0050>, <arenz_group_python.data_treatment.util.Q_V object at 0x000002A9968E8590>]\n"
+      "Integration_ [<arenz_group_python.data_treatment.util.Q_V object at 0x000001BC375EFB90>, <arenz_group_python.data_treatment.util.Q_V object at 0x000001BC3762D090>]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['C', '/m^2', 'm^2']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +353,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m cv \u001b[38;5;241m=\u001b[39m CV_Datas(files[\u001b[38;5;241m11\u001b[39m:\u001b[38;5;241m13\u001b[39m])\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m cv \u001b[38;5;241m=\u001b[39m CV_Datas(files[\u001b[38;5;241m11\u001b[39m:\u001b[38;5;241m13\u001b[39m])\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\src\\arenz_group_python\\data_treatment\\cv_datas.py:90\u001b[0m, in \u001b[0;36mCV_Datas.plot\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;66;03m#cv_kwargs[\"legend\"] = \"aaaaa\"\u001b[39;00m\n\u001b[0;32m     89\u001b[0m cv_kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mplot\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m CV_plot\n\u001b[1;32m---> 90\u001b[0m cv_kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetup_data\u001b[49m\u001b[38;5;241m.\u001b[39mname\n\u001b[0;32m     91\u001b[0m cv\u001b[38;5;241m.\u001b[39mplot(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcv_kwargs)\n\u001b[0;32m     92\u001b[0m y_axis_title\u001b[38;5;241m=\u001b[39m cv\u001b[38;5;241m.\u001b[39mi_label\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'CV_Datas' object has no attribute 'setup_data'"
      ]
