--- a/tests/classTest.ipynb
+++ b/tests/classTest.ipynb
@@ -259,6 +259,105 @@
     "xa = np.linspace(-2.5, 2.5, 30)\n",
     "yinterp = np.interp(xvals, x, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 5.0}\n",
+      "{'b': 5.0}\n",
+      "{'': 1.0}\n",
+      "{'': 1.0}\n",
+      " a^5.0 b^5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_unit_and_exponent(s:str):\n",
+    "    aa = s.split(\"^\",2)\n",
+    "    nyckel = aa[0]\n",
+    "    sign = 1\n",
+    "    fac =  1.0\n",
+    "    if nyckel.startswith(\"/\"):\n",
+    "        nyckel = nyckel[1:]\n",
+    "        sign = -1\n",
+    "    if len(aa)>1:                   #if \"^\" was found.\n",
+    "        fac = float(aa[1]) \n",
+    "    return nyckel, sign*fac\n",
+    "\n",
+    "    \n",
+    "def quantity_fix(s:str, factor:float = 1):\n",
+    "    list_of_quantities = s.split(\" \", 100)\n",
+    "    k={}\n",
+    "    for single_quantity in list_of_quantities:\n",
+    "        nyckel, exponent = get_unit_and_exponent(single_quantity)\n",
+    "        val = float(k.get(nyckel, 0))  \n",
+    "        k[nyckel] = val + exponent\n",
+    "    prep={} \n",
+    "    for key, value in k.items():\n",
+    "        if int(value*100) != 0:\n",
+    "            prep[key] = value * factor\n",
+    "    sr =\"\"\n",
+    "    #print (\"quantity_fix:\",prep)  \n",
+    "    for key, value in prep.items():\n",
+    "        if int(value*10) == 10:\n",
+    "            sr = sr +\" \" + key\n",
+    "        elif int(value) == value:\n",
+    "            sr = sr+ f' {key}^{value:.0f}'\n",
+    "        else:\n",
+    "            sr = sr+ f' {key}^{value:.1f}'\n",
+    "    return sr.strip()\n",
+    "\n",
+    "class symbols:\n",
+    "    def __init__(self,s:str=\"\"):\n",
+    "        self.symbols = {}\n",
+    "        list_of_quantities = s.split(\" \", 100)\n",
+    "        k={}\n",
+    "        for single_quantity in list_of_quantities:\n",
+    "            nyckel, exponent = get_unit_and_exponent(single_quantity)\n",
+    "            val = float(k.get(nyckel, 0))  \n",
+    "            k[nyckel] = val + exponent\n",
+    "        self.symbols = k.copy()\n",
+    "        print(k)\n",
+    "        \n",
+    "    def __str__(self) -> str:\n",
+    "        s =\"\"\n",
+    "        for x, y in self.symbols.items():\n",
+    "            #print(x,y)\n",
+    "            s = s + \" \" + f'{x}^{y}' \n",
+    "        return s\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        #s = quantity_fix(self.symbols + other.symbols)             \n",
+    "        k=symbols()\n",
+    "        k=self.symbols\n",
+    "        for quantity,exponent in other.symbols.items():\n",
+    "            val = float(self.symbols.get(quantity, 0))  \n",
+    "            k[quantity] = val + exponent\n",
+    "        r = symbols()\n",
+    "        r.symbols = k\n",
+    "        return r \n",
+    "    \n",
+    "    def __pow__(self, other):\n",
+    "        k=symbols()\n",
+    "        k=self.symbols\n",
+    "        for quantity,exponent in other.symbols.items():\n",
+    "            val = float(self.symbols.get(quantity, 0))  \n",
+    "            k[quantity] = val + exponent\n",
+    "        r = symbols()\n",
+    "        r.symbols = k\n",
+    "        return r \n",
+    "    \n",
+    "a = symbols(\"a^5\")\n",
+    "b = symbols(\"b^5\")\n",
+    "c = a+b\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
