--- a/dev/data/set1/Tafel Analysis_CV.ipynb
+++ b/dev/data/set1/Tafel Analysis_CV.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n"
+      "['C:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n",
+      "\"data_raw\" could not be found as a branch of the folder tree form the notebook.\n",
+      "Please use standard project structure.\n",
+      ".\n"
      ]
     }
    ],
@@ -19,14 +22,16 @@
     "from arenz_group_python import CV_Datas\n",
     "from arenz_group_python import CV_Data\n",
     "from arenz_group_python import EC_Data\n",
+    "from arenz_group_python import Project_Paths\n",
     "\n",
     "print(arenz_group_python.__path__)\n",
-    "nb_path = Path.cwd()"
+    "nb_path = Path.cwd()\n",
+    "print(Project_Paths().rawdata_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
