--- a/dev/data/set1/Levich_Analysis_CV.ipynb
+++ b/dev/data/set1/Levich_Analysis_CV.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,9 +20,19 @@
      "text": [
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\dev\\data\\set1\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
-      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\dev\\data\\set1\n"
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'arenz_group_python.data_treatment' has no attribute 'util_paths'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(pa)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m#add\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m#sys.path.insert(0,str(pa))\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01marenz_group_python\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(arenz_group_python\u001b[38;5;241m.\u001b[39m__path__)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01marenz_group_python\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CV_Datas, Quantity_Value_Unit \u001b[38;5;28;01mas\u001b[39;00m QV\n",
+      "File \u001b[1;32mc:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\\arenz_group_python\\__init__.py:7\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Leave it empty. This is just a special file that tells pip that your main module is in this folder. \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# No need to add anything here. Feel free to delete this line when you make your own package.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#from any import EC_Data\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;43;01mfrom\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;21;43;01m.\u001b[39;49;00m\u001b[38;5;21;43;01mdata_treatment\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mimport\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mproject\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutil_paths\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Project_Paths\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m#from .ec_data import * \u001b[39;00m\n\u001b[0;32m     11\u001b[0m \n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m#__path__ = [os.path.join(os.path.dirname(os.path.abspath(__file__)), 'data_treatment')]\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m#print(\"loading arenz_group_python\")\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m#print(__path__)\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'arenz_group_python.data_treatment' has no attribute 'util_paths'"
      ]
     }
    ],
@@ -45,7 +55,7 @@
     "print(arenz_group_python.__path__)\n",
     "\n",
     "\n",
-    "from arenz_group_python import CV_Datas, Quanity_Value_Unit as QV\n",
+    "from arenz_group_python import CV_Datas, Quantity_Value_Unit as QV\n",
     "from arenz_group_python import Project_Paths\n",
     "print(nb_path)\n",
     "pp= Project_Paths()"
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
