--- a/dev/Project_Setup/notebooks_models/read_keys.ipynb
+++ b/dev/Project_Setup/notebooks_models/read_keys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\dev\\Project_Setup\\notebooks_models\n",
       "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\dev\\Project_Setup\\notebooks_models\n",
-      "+\".env\" was created\n"
+      "-\".env\" already exists\n"
      ]
     }
    ],
@@ -26,32 +26,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#Python environment file\n",
-      "#The PYTHONPATH adds relative and absolute search paths\n",
-      "# Paths are relative to the workspace folder for python,# however, they are relative to the jypiter notebook when execute in a notebook.\n",
-      "# Therefor, an absolute search path is needed if jypiter is to be used.\n",
-      "WORKSPACE_FOLDER=c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\dev\\Project_Setup\\notebooks_models\n",
-      "PYTHONPATH=${WORKSPACE_FOLDER}/py_scripts;\n",
-      "# so it is best make the path absolute.  ';'\n",
-      "# Add more path and separate them by ';'\n",
-      "\n"
+      "\n",
+      "{'a': 'b', 'c': 'd', 'e': '33', 'fe': 'fdf'}\n"
      ]
     }
    ],
    "source": [
     "exDict = {1:1, 2:2, 3:3}\n",
-    "with open('.env', 'r') as file:\n",
-    "    a= file.read()\n",
+    "info=[]\n",
+    "k={\"a\": \"b\"}\n",
+    "with open('keys.txt', 'r') as file:\n",
+    "    aa= True\n",
+    "    while(aa):\n",
+    "        a=  file.readline()\n",
+    "        if a == \"\":\n",
+    "            break\n",
+    "        else:\n",
+    "            info.append(a)\n",
+    "            #print(a)\n",
+    "            vals = a.split(\"=\",1)\n",
+    "            if len(vals)>=2:\n",
+    "                key= str(vals[0]).strip().replace(\"'\",\"\").replace('\"',\"\").strip()\n",
+    "                k[key] = vals[1].strip()\n",
+    "        \n",
     "    file.close\n",
     "print(a)\n",
-    "print(a)"
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 'b', 'c': 'd', 'e': '33', 'fe': 'fdf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from arenz_group_python.data_treatment.key_values_to_file import read_keys_w_value\n",
+    "\n",
+    "a = read_keys_w_value(\"keys.txt\")\n",
+    "print(a)\n"
    ]
   }
  ],
